# wayland_module

./: CMakeLists.txt  main.cpp  simple_wayland.cppm  simple_xkb.cppm  vulkan.cppm  wayland.cppm  xkb.cppm  xkbcommon.cppm
simple_wayland/: buffer.cppm  common.cppm  display.cppm  seat.cppm  window.cppm
wayland/: buffer.cppm  common.cppm  display.cppm  external.cppm  seat.cppm  window.cppm
xkb/: external.cppm
